--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -40,7 +40,7 @@
     }
 
     .title-date {
-        @apply max-w-80 bg-gray-600 text-8xl font-semibold text-left mt-10 mb-10;
+        @apply max-w-80 bg-gray-600 text-center text-7xl font-semibold text-left pt-3 pb-3;
     }
 
     .title-portada {
