--- a/src/views/cta.html
+++ b/src/views/cta.html
@@ -4,6 +4,5 @@
       <img src="/src/assets/images/mujer_cocinando.png" alt="Imagen 1" class="w-full ">
 
     <div class="bg-elired p-5 flex-grow flex flex-col justify-between">  <p class="text-white text-2xl mt-10 mb-4">Mostra les teves habilitats culinàries al món! Brilla i compartix la teva passió amb altres cuiners.</p>
-  <a href="/src/participa.html" class="block w-full"><button class="btn-primary">
-    Participa
-  </button></a></div>
+  <a class="btn-primary" href="/src/participa.html" class="block w-full">
+    Participa</a></div>
