--- a/src/views/header.html
+++ b/src/views/header.html
@@ -7,41 +7,38 @@
           </a>
         </div>
 
-        
- <!-- Navbar -->
-<div class="w-full flex justify-end items-center text-eliblack">
-  <!-- Botón para mostrar el menú en pantallas pequeñas -->
-  <input type="checkbox" id="menu-toggle" class="hidden peer" />
-  <label for="menu-toggle" class="md:hidden p-2 cursor-pointer focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="material-icons">menu</span>
-  </label>
- 
- 
-  <!-- Navegación a la derecha -->
-  <div class="hidden peer-checked:block md:flex md:items-center w-full md:w-auto" id="navbarNav">
-    <ul class="w-full flex flex-col md:flex-row md:ml-auto space-y-2 md:space-y-0">
-      <li class="nav-item">
-        <a class="nav-link text-xl p-1 md:p-4
- hover:text-elired" href="/src/index.html">Home <i class="fa-solid fa-chevron-right"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-xl p-1 md:p-4
- hover:text-elired" href="/src/guanyadors.html">Guanyadors <i class="fa-solid fa-chevron-right"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-xl p-1 md:p-4
-hover:text-elired" href="/src/blog.html">Blog <i class="fa-solid fa-chevron-right"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-xl p-1 md:p-4
-hover:text-elired" href="/src/participa.html">Participa <i class="fa-solid fa-chevron-right"></i></a>
-      </li>
-    </ul>
+
+      <!-- Navbar -->
+      <div class="w-full flex flex-col md:flex-row justify-end items-center text-eliblack">
+        <!-- Botón para mostrar el menú en pantallas pequeñas -->
+        <input type="checkbox" id="menu-toggle" class="hidden peer" />
+        <label for="menu-toggle" class="md:hidden p-2 cursor-pointer focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="material-icons">menu</span>
+        </label>
+
+        <!-- Navegación a la derecha -->
+        <div class="hidden peer-checked:flex flex-col md:flex md:flex-row md:items-center w-full md:w-auto" id="navbarNav">
+          <ul class="w-full flex flex-col md:flex-row md:ml-auto space-y-2 md:space-y-0">
+            <li class="nav-item">
+              <a class="nav-link text-xl p-1 md:p-4 hover:text-elired" href="/src/index.html">Home <i class="fa-solid fa-chevron-right"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-xl p-1 md:p-4 hover:text-elired" href="/src/guanyadors.html">Guanyadors <i class="fa-solid fa-chevron-right"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-xl p-1 md:p-4 hover:text-elired" href="/src/blog.html">Blog <i class="fa-solid fa-chevron-right"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-xl p-1 md:p-4 hover:text-elired" href="/src/participa.html">Participa <i class="fa-solid fa-chevron-right"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
- </div>
+</header>
  
- 
- <!-- Asegúrate de incluir los íconos de Material y FontAwesome -->
+ <!-- iconos de Material y FontAwesome -->
  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
  
